# BMPfilesInteraction

./: README.md
bmp/: A2_bmp_helpers.c  CMakeLists.txt
