cmake_minimum_required (VERSION 2.6)
project (bmp)
add_library(helpers A2_bmp_helpers.c)
add_executable(bmp_info bmp_info.c)
target_link_libraries (bmp_info helpers)
add_executable(bmp_mask bmp_mask.c)
target_link_libraries (bmp_mask helpers)
add_executable(bmp_collage bmp_collage.c)
target_link_libraries (bmp_collage helpers)
